--- a/composer.json
+++ b/composer.json
@@ -20,13 +20,18 @@
         "symfony/monolog-bundle": "^2.8",
         "sensio/distribution-bundle": "^5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
-        "incenteev/composer-parameter-handler": "^2.0"
+        "incenteev/composer-parameter-handler": "^2.0",
+        "symfony/yaml": "^3.0",
+        "doctrine/doctrine-fixtures-bundle": "^2.3"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
         "symfony/phpunit-bridge": "^2.7"
     },
     "scripts": {
+        "pre-install-cmd": [
+            "AppBundle\\Composer\\HerokuDatabase::populateEnvironment"
+        ],
         "post-install-cmd": [
             "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
@@ -42,7 +47,11 @@
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::prepareDeploymentTarget"
+        ],
+        "compile" : [
+            "php bin/console doctrine:schema:update --force"
         ]
+
     },
     "config": {
         "platform": {
@@ -56,8 +65,15 @@
         "symfony-web-dir": "web",
         "symfony-tests-dir": "tests",
         "symfony-assets-install": "relative",
-        "incenteev-parameters": {
-            "file": "app/config/parameters.yml"
+        "incenteev-parameters" : {
+            "file" : "app/config/parameters.yml",
+            "env-map": {
+              "database_host": "DATABASE_HOST",
+              "database_port": "DATABASE_PORT",
+              "database_name": "DATABASE_NAME",
+              "database_user": "DATABASE_USER",
+              "database_password": "DATABASE_PASSWORD"
+            }
         },
         "branch-alias": {
             "dev-master": "3.1-dev"
